change logo color and fix some light/dark mode color issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@ html {
   --color-primary: #07694a;
   --color-secondary: var(--secondary);
   --color-custom-red: #ff4a4a;
-  --color-btn: #3ae7b5;
+  --color-btn: #24a37c;
   --color-card: var(--card);
   --color-input: #141414;
 
